# flake-templates

./: README.md  flake.nix
doc/: README.md  doc.md  flake.nix
go/: README.md  flake.nix  go.mod  main.go
js/: README.md  default.nix  flake.nix  package-lock.json  package.json
js/src/: main.ts
python/: README.md  flake.nix  pyproject.toml
python/src/app/: app.py  main.py
typst/: .gitignore  README.md  doc.typ  example.d2  example.mermaid  flake.nix
