[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "Adrian Hesketh", email = "inbox@adrianhesketh.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
app = 'app.main:main'

[build-system]
requires = ["uv_build>=0.7.22,<0.10.0"]
build-backend = "uv_build"
